move figs to tex folders, edit tex file

--- a/final_report/FinalReport.tex
+++ b/final_report/FinalReport.tex
@@ -1,4 +1,4 @@
-\RequirePackage[2020-02-02]{latexrelease}
+%\RequirePackage[2020-02-02]{latexrelease}
 \documentclass[letter,scriptaddress,twocolumn, prl]{revtex4}
 
 \usepackage{amsmath}%,amssymb} 
@@ -150,7 +150,7 @@ urlcolor=black,%
 \end{thebibliography}
 
 \appendix
-\section{\\Appendix A: Convergence}
+\section{Appendix A: Convergence}
 
 \begin{figure}[h]
 	\begin{center}
