stop tracking non-tex tex files

--- a/final_report/FinalReport.tex
+++ b/final_report/FinalReport.tex
@@ -1,4 +1,4 @@
-%\RequirePackage[2020-02-02]{latexrelease}
+\RequirePackage[2020-02-02]{latexrelease}
 \documentclass[letter,scriptaddress,twocolumn, prl]{revtex4}
 
 \usepackage{amsmath}%,amssymb} 
