make sections not so big and caps

--- a/final_report/FinalReport.tex
+++ b/final_report/FinalReport.tex
@@ -71,7 +71,7 @@ urlcolor=black,%
 	\end{center}
 \end{figure*}
 
-\section{Introduction}
+\textbf{Introduction:}
 
 \begin{equation}
 	\label{eq:hamiltonian}
@@ -83,9 +83,9 @@ urlcolor=black,%
 	T_c = \frac{2}{\ln{(1+\sqrt{2})}} \approx 2.269 (J/k_B)
 \end{equation}
 
-\section{Methods}
+\textbf{Methods:}
 
-\section{Data and Analysis}
+\textbf{Data and Analysis:}
 
 \begin{figure}[h]
 	\begin{center}
@@ -133,7 +133,7 @@ urlcolor=black,%
 	\end{center}
 \end{figure*}
 
-\section{Acknowledgements}
+\textbf{Acknowledgements:}
 	Prof. Navon, Prof. Newburgh, HongJoon
 
 \bibliographystyle{unsrt} 
