--- a/final_report/FinalReport.tex
+++ b/final_report/FinalReport.tex
@@ -71,7 +71,13 @@ urlcolor=black,%
 	\end{center}
 \end{figure*}
 
-\textbf{Introduction:}
+\textbf{Introduction:} The Ising model is an idealized model of ferromagnetism and notably one of the few models in statistical mechanics for which an exact analytical solution can be found. In the model, a solid material is represented by a regular $d$-dimensional lattice of spin states, each of which can take one of two values ($\pm 1$). The spin states interact with their neighbors and with an external magnetic field according to the hamiltonian
+\begin{equation}
+	H = -J \sum_{\langle i, j \rangle} \sigma_i \sigma_j - B \sum_i \sigma_i
+\end{equation}
+where $\sigma_i$ is the magnetic moment at lattice site $i$, $J$ is the interaction energy, $B$ is the magnetic field strength, and $\langle i, j \rangle$ denotes all pairs of neighboring lattice sites.
+Onsager's analytical solution for rectangular lattices \cite{Onsager} describes the equilibrium behavior of the model as a function of $J$ and $B$ as well as the temperature $T$. An interesting feature is that on a lattice that is infinite in two dimensions, the model exhibits a phase transition at the critical temperature $T_c$, where the equilibrium state of the model is discontinuous with respect to temperature. Qualitatively, for $T > T_c$ the lattice is highly disordered, while for $T < T_c$ the spin states correlate significantly with others nearby (\autoref{fig:fig1}).
+The model's behavior at temperatures near $T_c$ has been the subject of extensive study.
 
 \begin{equation}
 	\label{eq:hamiltonian}
