--- a/final_report/FinalReport.tex
+++ b/final_report/FinalReport.tex
@@ -89,9 +89,7 @@ The model's behavior at temperatures near $T_c$ has been the subject of extensiv
 	T_c = \frac{2}{\ln{(1+\sqrt{2})}} \approx 2.269 (J/k_B)
 \end{equation}
 
-\textbf{Methods:}
-
-We simulate the 2d Ising Model on an $N$ by $N$ square lattice using the Metropolis-Hastings algorithm, a Markov chain Monte Carlo method which enables sampling when one knows only relative, rather than absolute, probabilities. The lattice, along with representative lattice configurations above, near, and below critical temperature, is depicted in \autoref{fig:fig1}.
+\textbf{Methods:} We simulate the 2d Ising Model on an $N$ by $N$ square lattice using the Metropolis-Hastings algorithm, a Markov chain Monte Carlo method which enables sampling when one knows only relative, rather than absolute, probabilities. The lattice, along with representative lattice configurations above, near, and below critical temperature, is depicted in \autoref{fig:fig1}.
 
 Throughout the experiment, we use a lattice of size N = 100 with periodic boundary conditions, such that the one-hundredth lattice site in a given row or column is considered adjacent to the first. [The decision to use N = 100 is explained during analysis of correlation length $\xi$.]
 
