--- a/final_report/FinalReport.tex
+++ b/final_report/FinalReport.tex
@@ -71,35 +71,51 @@ urlcolor=black,%
 	\end{center}
 \end{figure*}
 
-\textbf{Introduction:} The Ising model is an idealized model of ferromagnetism and notably one of the few models in statistical mechanics for which an exact analytical solution can be found. In the model, a solid material is represented by a regular $d$-dimensional lattice of spin states, each of which can take one of two values ($\pm 1$). The spin states interact with their neighbors and with an external magnetic field according to the hamiltonian
+\textbf{Introduction:} The Ising model is an idealized model of ferromagnetism and notably one of the few models in statistical mechanics with an exact analytical solution. In the model, a solid material is represented as a regular $d$-dimensional lattice of spin states, each of which can take one of two values ($\pm 1$). The spin states interact with their neighbors and with an external magnetic field according to the Hamiltonian
 \begin{equation}
 	H = -J \sum_{\langle i, j \rangle} \sigma_i \sigma_j - B \sum_i \sigma_i
 \end{equation}
-where $\sigma_i$ is the magnetic moment at lattice site $i$, $J$ is the interaction energy, $B$ is the magnetic field strength, and $\langle i, j \rangle$ denotes all pairs of neighboring lattice sites.\\
-Onsager's analytical solution for rectangular lattices \cite{Onsager} describes the equilibrium behavior of the model as a function of $J$ and $B$ as well as the temperature $T$. An interesting feature is that on a lattice that is infinite in two dimensions, the model exhibits a phase transition at the critical temperature $T_c$, given by
+where $\sigma_i$ is the magnetic moment at lattice site $i$, $J$ is the interaction energy, $B$ is the magnetic field strength, and $\langle i, j \rangle$ denotes all pairs of neighboring lattice sites.
+
+Onsager's analytical solution for infinite rectangular lattices \cite{Onsager} describes the equilibrium behavior of the model as a function of $J$ and $B$ as well as the temperature $T$. An interesting feature is that on a lattice that is infinite in two dimensions, the model exhibits a phase transition at the critical temperature $T_c$, given by
 \begin{equation}
 	\label{eq:Tc}
 	\frac{k_B T_c}{J} = \frac{2}{\ln{(1+\sqrt{2})}} \approx 2.269
 \end{equation}
-where $k_B$ is Boltzmann's constant. At $T_c$ the equilibrium state of the model is discontinuous with respect to temperature. Qualitatively, for $T > T_c$ the lattice is highly disordered, while for $T < T_c$ the spin states correlate significantly with others nearby (\autoref{fig:fig1}).\\
-The model's behavior at temperatures near $T_c$ has been the subject of extensive study. As the temperature approaches $T_c$, several observable quantities vary according to power laws in the reduced temperature $\tau = \frac{|T - T_c|}{T_c}$. Among these are specific heat $C_v$, magnetization (order parameter) $M$, magnetic susceptibility $\chi$, and correlation length $\xi$. These power laws, and their corresponding exponents (the critical exponents) are not specific to a particular Ising lattice; rather, they are properties of a broader universality class of critical systems \cite{Stanley}. For the Ising model on a rectangular lattice we expect the following behavior near $T_c$:
+where $k_B$ is Boltzmann's constant. At $T_c$ the equilibrium state of the model is discontinuous with respect to temperature. Qualitatively, for $T > T_c$ the lattice is highly disordered, while for $T < T_c$ the spin states correlate significantly with others nearby (\autoref{fig:fig1}).
+
+The model's behavior at temperatures near $T_c$ has been the subject of extensive study. As the temperature approaches $T_c$, several observable quantities vary according to power laws in the reduced temperature $t = \frac{T - T_c}{T_c}$. Among these are specific heat $C_v$, absolute magnetization $|M|$, magnetic susceptibility $\chi$, and correlation length $\xi$. Auto-correlation $\submin{\sigma(0)\sigma(x)}$ also varies according to a power law, although in lattice distance $x$ rather than in $t$. These power laws, and their corresponding exponents (the critical exponents) are not specific to a particular Ising lattice; rather, they are properties of a broader universality class of critical systems \cite{Stanley}. For the Ising model on a rectangular lattice we expect the following behavior near $T_c$: %\autoref{tab:exponents}.
+
 % Table of critical exponents
-\begin{table}[h]
+% \begin{table}[h]
 	\begin{center}
 		\begin{tabular}{|c|c|c|}
 			\hline
 			Quantity & Power Law & Predicted Exponent \\
 			\hline
-			$C_v$ & $\tau^{-\alpha}$ & $\alpha = 0$ \\
-			$M$ & $\tau^\beta$ & $\beta \approx 1/8$ \\
-			$\chi$ & $\tau^{-\gamma}$ & $\gamma \approx 7/4$ \\
-			$\xi$ & $\tau^{-\nu}$ & $\nu \approx 1$ \\
+			$C_v$ & $|t|^{-\alpha}$ & $\alpha = 0$ \\
+			$M$ & $|t|^\beta$ & $\beta \approx 1/8$ \\
+			$\chi$ & $|t|^{-\gamma}$ & $\gamma \approx 7/4$ \\
+			$\xi$ & $|t|^{-\nu}$ & $\nu \approx 1$ \\
+			$\submin{\sigma(0)\sigma(x)}$ & $|x|^{-d + 2 - \eta}$ & $ \eta \approx 1/4$ \\
 			\hline
 		\end{tabular}
-		\caption{Analytical prediction of critical exponents for the 2d Ising model. Note that in the case of $\alpha = 0$, the specific heat is expected to diverge logarithmically as $C_v \sim \log \tau$.}
-		\label{tab:exponents}
+%		\caption{Analytical prediction of critical exponents for the $d = 2$ Ising model. All exponents are defined above and below $T_c$ except $\beta$, which is defined only for $T < T_c$. Note that in the case of $\alpha = 0$, the specific heat is expected to diverge logarithmically as $C_v \sim \log t$.}
+%		\label{tab:exponents}
 	\end{center}
-\end{table}
+% \end{table}
+
+These critical exponents also obey certain identities [[source?]]:
+
+\begin{equation}
+	\text{Rushbrooke’s Identity: } \alpha + 2\beta + \gamma = 2 \label{eq:rushbrooke}
+\end{equation}
+\begin{equation}
+	\text{Josephson’s Identity: } 2 - \alpha = d * \nu \label{eq:josephson}
+\end{equation}
+\begin{equation}
+	\text{Fisher’s Identity: } \gamma = (2 - \eta)\nu \label{eq:fisher}
+\end{equation}
 
 \textbf{Methods:} We simulate the 2d Ising Model on an $N$ by $N$ square lattice using the Metropolis-Hastings algorithm, a Markov chain Monte Carlo method which enables sampling when one knows only relative, rather than absolute, probabilities. The lattice, along with representative lattice configurations above, near, and below critical temperature, is depicted in \autoref{fig:fig1}.
 
